--- a/Prak 02/Prak_02 - Copy.rmd
+++ b/Prak 02/Prak_02 - Copy.rmd
@@ -20,6 +20,8 @@ output:
     fig_caption: true
 ---
 
+![](images/Bg_Visdat.png){style="display: block; margin: auto;" width="393"}
+
 ```{r setup, include=FALSE, echo=FALSE, warning=FALSE, message = FALSE}
 #                      -=( Install & Load Package Function )=-
 install_load <- function (package1, ...)  {   
@@ -51,13 +53,9 @@ path <- function() gsub  ( "\\\\",  "/",  readClipboard ()  )
 opts_knit$set(root.dir = "C:/Users/Fathan/Documents/Obsidian Vault/2. Kuliah/Smt 7 & 8/Visdat-25/Prak 02")
 ```
 
-```{r}
-setwd("C:/Users/Fathan/Documents/Obsidian Vault/2. Kuliah/Smt 7 & 8/Visdat-25/Prak 02")
-```
+# **Materi Praktikum** {style="display: block; margin: auto;"}
 
-# **Materi Praktikum**
-
-![](images/clipboard-4160132647.png){width="500px" style="display: block; margin: auto;"}
+![](images/clipboard-4160132647.png){style="display: block; margin: auto;" width="500"}
 
 Materi yang akan dibahas dalam praktikum ini adalah:
 
