--- a/Prak 02/Prak_02_Perbandingan-Kategori.rmd
+++ b/Prak 02/Prak_02_Perbandingan-Kategori.rmd
@@ -115,9 +115,10 @@ chart <-
   geom_text(aes(label = count), hjust = -0.2, size = 2.5) +
   
   # Settings
-  geom_hline(yintercept = -0.3, color = "black", linewidth = 0.5) +  # FIX: Gunakan `linewidth`
+  geom_hline(yintercept = -0.3, color = "black", linewidth = 0.5) +  
   coord_flip() +
   theme_minimal() +
+  
   labs(title = "Dominasi Tesla dalam Pasar Kendaraan Listrik",
        subtitle = "Kesenjangan Tesla dan Rivalnya dalam Industri EV",
        x = "", 
@@ -131,7 +132,6 @@ chart <-
         panel.grid.minor.x = element_line(linetype = "dashed")
   )
 
-# Tampilkan chart
 chart
 
 # Save Chart
@@ -146,6 +146,65 @@ ggplot(data_ev_sorted,
 # Bar chart
 geom_bar(stat = "identity", width = 0.8, fill = "steelblue") +
 coord_flip()
+```
+
+## Lolipop Chart {.tabset}
+
+Variasi dari barchart
+
+### Advanced
+
+```{r fig.height=5, fig.width=10, dpi=300}
+# Sort & Filter
+data_ev_filtered <- data_ev %>%
+  count(Make, name = "count") %>%
+  filter(count > 2000) %>%  
+  arrange(desc(count)) %>%
+  mutate(Make = str_to_title(Make))  
+
+# Top 3
+top3 <- head(data_ev_filtered$Make, 3)
+
+chart <-
+  ggplot(data_ev_filtered, aes(x = reorder(Make, count), y = count)) +
+  
+  # Lolipop Stick
+  geom_segment(aes(xend = Make, y = 0, yend = count), 
+               color = ifelse(data_ev_filtered$Make %in% top3, 
+                              "steelblue", "gray50"),
+               linewidth = 1.5) +
+  
+  # Lolipop Head
+  geom_point(size = 10, pch = 19, color = 
+               ifelse(data_ev_filtered$Make %in% top3, "steelblue", "gray50")) +
+  
+  # Label
+  geom_text(aes(label = count), color = "white", size = 2.5, fontface = "bold") +
+  
+  # Tema dan layout
+  coord_flip() +
+  theme_minimal() +
+  scale_color_identity() +  # Apply warna tanpa legend
+  geom_hline(yintercept = -0.3, color = "black", linewidth = 0.5) +  
+  
+  labs(title = "Dominasi tesla dalam pasar kendaraan listrik",
+       subtitle = "Hanya menampilkan brand dengan lebih 2000 kendaraan terdaftar",
+       x = "", 
+       y = "") +
+  
+  theme(axis.text.y = element_text(size = 8, hjust = 1, face = "bold", 
+                                   margin = margin(r = -25)),
+        plot.title = element_text(hjust = -0.05, size = 14, face = "bold"),
+        plot.subtitle = element_text(hjust = -0.04, size = 8),
+        panel.grid.major.y = element_blank(),
+        panel.grid.major.x = element_line(linetype = "dashed"),
+        panel.grid.minor.x = element_line(linetype = "dashed")
+  )
+
+chart
+
+# Save Chart
+ggsave("Chart/Cobain_Lollipop_Filtered_LabelInside.png", chart, dpi = 300, height = 5, width = 10)
 ```
 
 ## Paired Bar {#paired-bar}
