--- a/Prak 02/Prak_02_Perbandingan-Kategori.rmd
+++ b/Prak 02/Prak_02_Perbandingan-Kategori.rmd
@@ -175,8 +175,10 @@ chart <-
                linewidth = 1.5) +
   
   # Lolipop Head
-  geom_point(size = 10, pch = 19, color = 
-               ifelse(data_ev_filtered$Make %in% top3, "steelblue", "gray50")) +
+  geom_point(size = 10, 
+             pch = 19, 
+             color = ifelse(data_ev_filtered$Make %in% top3, 
+                            "steelblue", "gray50")) +
   
   # Label
   geom_text(aes(label = count), color = "white", size = 2.5, fontface = "bold") +
@@ -207,17 +209,9 @@ chart
 ggsave("Chart/02_lolipop.png", chart, dpi = 300, height = 5, width = 10)
 ```
 
+### Size
+
 ```{r fig.height=5, fig.width=10, dpi=300}
-# Sort & Filter (hanya kendaraan >2000)
-data_ev_filtered <- data_ev %>%
-  count(Make, name = "count") %>%
-  filter(count > 2000) %>%  
-  arrange(desc(count)) %>%
-  mutate(Make = str_to_title(Make))  
-
-# Top 3
-top3 <- head(data_ev_filtered$Make, 3)
-
 chart <-
   ggplot(data_ev_filtered, aes(x = reorder(Make, count), y = count)) +
   
@@ -226,8 +220,9 @@ chart <-
                color = ifelse(data_ev_filtered$Make %in% top3, "steelblue", "gray50"),
                linewidth = 1.5) +
   
-  # Lolipop Head dengan ukuran lebih besar
-  geom_point(aes(size = count, color = ifelse(Make %in% top3, "steelblue", "gray50")), 
+  # Lolipop Head 
+  geom_point(aes(size = count, 
+                 color = ifelse(Make %in% top3, "steelblue", "gray50")), 
              pch = 19) +
   
   # Tema dan layout
@@ -256,6 +251,24 @@ chart
 
 # Save Chart
 ggsave("Chart/02_lolipop_var.png", chart, dpi = 300, height = 5, width = 10)
+```
+
+### Sederhana
+
+```{r fig.height=5, fig.width=10, dpi=300}
+chart <-
+  ggplot(data_ev_filtered, aes(x = reorder(Make, count), y = count)) +
+  
+  # Lolipop Stick
+  geom_segment(aes(xend = Make, y = 0, yend = count), 
+               color = "steelblue",
+               linewidth = 1.5) +
+  
+  # Lolipop Head 
+  geom_point(size = 10, color = "steelblue", pch = 19) +
+  coord_flip()
+
+chart
 ```
 
 ## Paired Bar {#paired-bar}
